# ChangeLog for dev-python/pygobject
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/pygobject/ChangeLog,v 1.47 2008/08/12 13:28:49 armin76 Exp $

  12 Aug 2008; Raúl Porcel <armin76@gentoo.org> pygobject-2.14.2.ebuild:
  alpha/ia64/sparc stable wrt #229709

  10 Aug 2008; Markus Meier <maekke@gentoo.org> pygobject-2.14.2.ebuild:
  x86 stable, bug #229709

  06 Aug 2008; Jesus Rivero <neurogeek@gentoo.org> metadata.xml:
  add GLEP 56 USE flag desc from use.local.desc

  30 Jul 2008; Brent Baude <ranger@gentoo.org> pygobject-2.14.2.ebuild:
  Marking pygobject-2.14.2 ppc stable for bug 229709

  26 Jul 2008; Olivier Crête <tester@gentoo.org> pygobject-2.14.2.ebuild:
  Stable on amd64, bug #229709

  14 Jul 2008; Gilles Dartiguelongue <eva@gentoo.org>
  pygobject-2.14.2.ebuild:
  add virtualx eclass to allow test suite to run properly

  04 Jul 2008; Gilles Dartiguelongue <eva@gentoo.org>
  +files/pygobject-2.14.2-libffi.patch, pygobject-2.14.2.ebuild:
  fix libffi condition, fix bug #230751

  29 May 2008; Ali Polatel <hawking@gentoo.org> pygobject-2.12.3.ebuild:
  Use get_libdir.

  29 May 2008; Ali Polatel <hawking@gentoo.org> pygobject-2.14.0.ebuild,
  pygobject-2.14.1.ebuild, pygobject-2.14.2.ebuild:
  python_mod_compile is ROOT aware.

  25 May 2008; Gilles Dartiguelongue <eva@gentoo.org>
  pygobject-2.12.3.ebuild:
  fix QA on 2.12.3, changing to ~mips, mips is experimental.

*pygobject-2.14.2 (25 May 2008)

  25 May 2008; Gilles Dartiguelongue <eva@gentoo.org>
  +pygobject-2.14.2.ebuild:
  bump to 2.14.2. Fix bug #198875.

  22 Mar 2008; Daniel Gryniewicz <dang@gentoo.org> pygobject-2.14.1.ebuild:
  Marked stable on amd64 for bug #212986

  17 Mar 2008; Jeroen Roovers <jer@gentoo.org> pygobject-2.14.1.ebuild:
  Stable for HPPA (bug #212986).

  16 Mar 2008; Christian Faulhammer <opfer@gentoo.org>
  pygobject-2.14.1.ebuild:
  stable x86, bug 212986
